--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
             
             <div class="monster-gallery">
                 <div class="monster-card">
-                    <img src="/api/placeholder/250/200" alt="アケノシルム" class="monster-img">
+                    <img src="mh.jpg" alt="アケノシルム" class="monster-img">
                     <h3>アケノシルム</h3>
                     <p>本作の看板モンスター。巨大な甲殻と鋭い爪を持ち、荒野を支配する。</p>
                 </div>
