--- a/index.html
+++ b/index.html
@@ -238,17 +238,17 @@
                     <p>本作の看板モンスター。巨大な甲殻と鋭い爪を持ち、荒野を支配する。</p>
                 </div>
                 <div class="monster-card">
-                    <img src="/api/placeholder/250/200" alt="リオレウス" class="monster-img">
+                    <img src="mh2.jpg" alt="リオレウス" class="monster-img">
                     <h3>リオレウス</h3>
                     <p>シリーズを代表する火を吐く飛竜。空と地上を行き来する戦闘スタイルが特徴。</p>
                 </div>
                 <div class="monster-card">
-                    <img src="/api/placeholder/250/200" alt="ジンオウガ" class="monster-img">
+                    <img src="mh3.jpg" alt="ジンオウガ" class="monster-img">
                     <h3>ジンオウガ</h3>
                     <p>雷を操る牙竜。俊敏な動きと雷撃による攻撃が特徴的。</p>
                 </div>
                 <div class="monster-card">
-                    <img src="/api/placeholder/250/200" alt="ネルギガンテ" class="monster-img">
+                    <img src="mh4.jpg" alt="ネルギガンテ" class="monster-img">
                     <h3>ネルギガンテ</h3>
                     <p>全身を覆う鋭い棘を武器とする古龍。破壊的な力を持つ。</p>
                 </div>
